...

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="TOUGE DASH"
            android:textColor="#26D7E5"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/widget_connection"
            android:layout_width="wrap_content"
...
